--- a/src/main/resources/templates/blog-entry.html
+++ b/src/main/resources/templates/blog-entry.html
@@ -15,5 +15,9 @@
 </p>
 <p th:text="${entry.content}">CONTENT</p>
 
+<p>
+    <a href="/">"Klikněte zde pro návrat na úvodní stranu"</a>
+</p>
+
 </body>
 </html>
